# starlark-bench

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  results.jsonl
.github/workflows/: bench.yml
scripts/: plot.py
scripts/python/: _harness.py  arithmetic.py  data_structures.py  function_calls.py  json_building.py  string_parsing.py
scripts/starlark/: arithmetic.star  data_structures.star  function_calls.star  json_building.star  string_parsing.star
src/: main.rs
